--- a/styleabout.css
+++ b/styleabout.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap');
 .section-about-p{
     height: 400px;
-    background: #121420;
+    background: #313133;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,14 +23,14 @@
 .section-about-pa>h1{
     font-family: 'Bebas Neue', sans-serif;
     color: white;
-    font-size: 150px;
+    font-size: 250px;
 }
 
 .section-about-pa>p{
-    font-family: 'Teko', sans-serif;
-    color: white;
     font-size: 30px;
-    font-weight: 200;
+    color: white;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .section-icons-about{
@@ -78,7 +78,7 @@
 
 .section-divs{
     height: 600px;
-    background: #121420;
+    background: #313133;
     display: flex;
     justify-content: space-around;
 }
@@ -173,5 +173,5 @@
 
 .space-about{
     height: 400px;
-    background: #121420;
+    background: #313133;
 }
