--- a/styleanimation.css
+++ b/styleanimation.css
@@ -411,24 +411,44 @@
 .section-tech{
     box-shadow: -10px -10px 20px #254BDD,
                 10px  10px 20px #760FF0;
-    transform: translateX(-180px);
-    transition: transform 1s ease;
+    transform:scale(.5)
+}
+
+.section-tech.hovered{
+    animation-name: tech;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
+}
+
+.section-tech1.hovered{
+    animation-name: tech;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
+}
+
+.section-tech2.hovered{
+    animation-name: tech;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
 }
 
 
 .section-tech1{
     box-shadow:  -10px -10px 20px #6D287E,
     10px  10px 20px #3395D0;
-    transform: translateX(-180px);
-    transition: transform 1s ease;
+    transform:scale(.5)
 }
 
 .section-tech2{
     box-shadow:  -10px -10px 20px #1CBEF7,
     10px  10px 20px #70D5F1;
-    transform: translateX(-180px);
-    transition: transform 1s ease;
+    transform:scale(.5)
 }
+
+@keyframes tech{ 0%{transform:scale(.5)} 100%{transform:scale(1)} }
 
 
 .outside-div1>p{
@@ -1595,12 +1615,12 @@
 
 .div-ps, .div-ai, .div-pr{
     transform: translateY(150px);
-    transition: transform 1.5s ease;
+    transition: transform 1.5s ease,  box-shadow 1.5s ease;
 }
 
 .div-ae, .div-cd, .div-fm{
     transform: translateY(-150px);
-    transition: transform 1.5s ease;
+    transition: transform 1.5s ease, box-shadow 1.5s ease;
 }
 
 .section-hb .div-ps.hovered,
@@ -1612,6 +1632,29 @@
     transform: translateY(0);
 }
 
+.section-hb .div-ps.hovered{
+    box-shadow: 0px 5px 30px 20px #2DA1F7;
+}
+
+.section-hb .div-ai.hovered{
+    box-shadow: 0px 5px 30px 20px #FA9400
+}
+
+.section-hb .div-pr.hovered{
+    box-shadow: 0px 5px 30px 20px #E273F7;
+}
+
+.section-hb .div-ae.hovered{
+    box-shadow: 0px 5px 30px 20px #9895F7;
+}
+
+.section-hb .div-cd.hovered{
+    box-shadow: 0px 5px 30px 20px #77CB0F;
+}
+
+.section-hb .div-fm.hovered{
+    box-shadow: 0px 5px 30px 20px #69E3B1;
+}
 
 /* Experiencia */
 
@@ -1705,6 +1748,15 @@
 
 .section-about-p .section-icons-about>i.hovered{
     animation-name: vibrar;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
+}
+
+
+@keyframes h2{0%{transform:scaleX(.2)}100%{transform:scaleX(1)}}
+.h2.hovered{
+    animation-name: h2;
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards
