--- a/stylecon.css
+++ b/stylecon.css
@@ -1,6 +1,6 @@
 .section-conta{
     height: 800px;
-    background: #121420;
+    background: #313133;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -170,4 +170,10 @@
 .div-gh:hover{
     opacity: 1;
     box-shadow: 0px 0px 20px 10px #8C08EB;
+}
+
+.space-about-ct{
+    height: 200px;
+    background: rgb(49,49,51);
+    background: linear-gradient(0deg, rgba(49,49,51,1) 17%, rgba(95,96,99,1) 100%);
 }
