--- a/styleheader.css
+++ b/styleheader.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bevan:ital@0;1&display=swap');
 
 *{
     padding: 0%;
@@ -10,7 +11,7 @@
 .header{
     height: 100px;
     width: 100%;
-    background: #121420;
+    background: #161617;
     display: flex;
     align-items: center;
     position: fixed;
@@ -18,7 +19,7 @@
 }
 
 .navbar{
-    background: #121420;
+    background: #161617;
     display: flex;
     width: 100%;
     justify-content: end;
@@ -32,6 +33,7 @@
     margin-right: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 700;
+    transition: scroll-behavior 0.5s;
 }
 
 .navbar>div{
@@ -41,19 +43,21 @@
     align-items: center;
     height: 50px;
     width: 150px;
-    border: 3px solid #121420;
+    border: 3px solid #161617;
     transition: transform 0.3s ease, transform 0.3s ease;
 }
 
 .section-titulo-header{
-    width: 100%;
+    width: 40%;
     display: flex;
     align-items: center;
     justify-content: start;
     margin: 100px;
     color: white;
-    font-family: 'Nosifer', sans-serif;
+    font-family: 'Bevan', serif;
     font-size: 35px;
+    position: absolute;
+    z-index: 1000;
 }
 
 /* Hover */
@@ -133,7 +137,7 @@
 
 .space-header-about{
     height: 250px;
-    background: #121420;
+    background: #313133;
 }
 
 .title{
@@ -146,4 +150,50 @@
     font-family: 'Bungee', sans-serif;
     font-size: 90px;
     color: white;
+}
+
+
+#id-sm.hover-activado{
+    border-radius: 20px;
+    border: 3px solid white;
+    transform: translateY(-5px);
+    background: #BC4B51;
+    box-shadow: 2px 2px 10px 2px #BC4B51;
+    text-decoration: underline white;
+}
+
+#id-tech.hover-activado{
+    border-radius: 20px;
+    border: 3px solid white;
+    transform: translateY(-5px);
+    background: #18206F;
+    box-shadow: 2px 2px 10px 2px #18206F;
+    text-decoration: underline white;
+}
+
+#id-hb.hover-activado{
+    border-radius: 20px;
+    border: 3px solid white;
+    transform: translateY(-5px);
+    background: #C52233;
+    box-shadow: 2px 2px 10px 2px #C52233;
+    text-decoration: underline white;
+}
+
+#id-exp.hover-activado{
+    border-radius: 20px;
+    border: 3px solid white;
+    transform: translateY(-5px);
+    background: #26784A;
+    box-shadow: 2px 2px 10px 2px #26784A;
+    text-decoration: underline white;
+}
+
+#id-ct.hover-activado{
+    border-radius: 20px;
+    border: 3px solid white;
+    transform: translateY(-5px);
+    background: #ED7D3A;
+    box-shadow: 2px 2px 10px 2px #ED7D3A;
+    text-decoration: underline white;
 }
