--- a/styleabout.css
+++ b/styleabout.css
@@ -175,3 +175,553 @@
     height: 400px;
     background: #313133;
 }
+
+@media (max-width: 1400px){
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap');
+.section-about-p{
+    height: 400px;
+    background: #313133;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-about-pa{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    text-align: center;
+}
+
+.section-about-pa>h1{
+    font-family: 'Bebas Neue', sans-serif;
+    color: white;
+    font-size: 170px;
+}
+
+.section-about-pa>p{
+    font-size: 23px;
+    color: white;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.section-icons-about{
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.section-icons-about>i{
+    font-size: 50px;
+}
+
+.ti-brand-html5{
+    color: #DE4B25;
+}
+
+.ti-brand-css3{
+    color: #254BDD;
+}
+
+.ti-brand-javascript{
+    color: #E8D44D;
+}
+
+.ti-brand-mysql{
+    color: #00718B;
+}
+
+.ti-sql{
+    color: #3395D0;
+}
+
+.ti-camera{
+    color: #2FA3F7;
+}
+
+.ti-palette{
+    color: #F79500;
+}
+
+.ti-player-play{
+    color: #61C3A4;
+}
+
+.section-divs{
+    height: 600px;
+    background: #313133;
+    display: flex;
+    justify-content: space-around;
+}
+
+.section-divs>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    width: 250px;
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
+.div-p{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
+
+.div-p>h2{
+    font-family: 'Staatliches', sans-serif;
+    font-size: 30px;
+}
+
+.div-p>p{
+    font-family: 'Asap Condensed', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.icons-div{
+    margin-top: 20px;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.ti-terminal-2{
+    color: #6D287E;
+}
+
+.ti-server{
+    color: #F61310;
+}
+
+.ti-brand-visual-studio{
+    color: #6B3494;
+}
+
+.ti-building-broadcast-tower{
+    color: #70D5F1;
+}
+
+.ti-network{
+    color: #1785B5;
+}
+
+.ti-world-www{
+    color: #0A98F7;
+}
+
+.ti-brand-windows{
+    color: #1CBEF7;
+}
+
+.ti-brand-debian{
+    color: #A50443;
+}
+
+.bi-ubuntu{
+    color: #EA5516;
+}
+
+.outside-div{
+    height: 20px;
+    border-radius: 20px;
+    border: 3px solid white;
+    width: 210px;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-family: 'Pixelify Sans', sans-serif;
+}
+
+.space-about{
+    height: 400px;
+    background: #313133;
+}
+}
+
+@media (max-width: 800px){
+    @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap');
+    .section-about-p{
+        height: 400px;
+        background: #313133;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .section-about-pa{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        text-align: center;
+    }
+    
+    .section-about-pa>h1{
+        font-family: 'Bebas Neue', sans-serif;
+        color: white;
+        font-size: 100px;
+    }
+    
+    .section-about-pa>p{
+        font-size: 18px;
+        color: white;
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    
+    .section-icons-about{
+        width: 80%;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+    
+    .section-icons-about>i{
+        font-size: 40px;
+    }
+    
+    .ti-brand-html5{
+        color: #DE4B25;
+    }
+    
+    .ti-brand-css3{
+        color: #254BDD;
+    }
+    
+    .ti-brand-javascript{
+        color: #E8D44D;
+    }
+    
+    .ti-brand-mysql{
+        color: #00718B;
+    }
+    
+    .ti-sql{
+        color: #3395D0;
+    }
+    
+    .ti-camera{
+        color: #2FA3F7;
+    }
+    
+    .ti-palette{
+        color: #F79500;
+    }
+    
+    .ti-player-play{
+        color: #61C3A4;
+    }
+    
+    .section-divs{
+        height: 600px;
+        background: #313133;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    .section-divs>div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+        width: 600px;
+        border-radius: 20px;
+        border: 3px solid white;
+        margin-bottom: 70px;
+    }
+    
+    .div-p{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 90%;
+        align-items: center;
+        text-align: center;
+        color: white;
+    }
+    
+    .div-p>h2{
+        font-family: 'Staatliches', sans-serif;
+        font-size: 30px;
+    }
+    
+    .div-p>p{
+        font-family: 'Asap Condensed', sans-serif;
+        font-size: 18px;
+        font-weight: 300;
+    }
+    
+    .icons-div{
+        margin-top: 20px;
+        width: 60%;
+        display: flex;
+        justify-content: space-around;
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+    
+    .ti-terminal-2{
+        color: #6D287E;
+    }
+    
+    .ti-server{
+        color: #F61310;
+    }
+    
+    .ti-brand-visual-studio{
+        color: #6B3494;
+    }
+    
+    .ti-building-broadcast-tower{
+        color: #70D5F1;
+    }
+    
+    .ti-network{
+        color: #1785B5;
+    }
+    
+    .ti-world-www{
+        color: #0A98F7;
+    }
+    
+    .ti-brand-windows{
+        color: #1CBEF7;
+    }
+    
+    .ti-brand-debian{
+        color: #A50443;
+    }
+    
+    .bi-ubuntu{
+        color: #EA5516;
+    }
+    
+    .outside-div{
+        height: 20px;
+        border-radius: 20px;
+        border: 3px solid white;
+        width: 500px;
+        display: flex;
+        justify-content: center;
+        color: white;
+        font-family: 'Pixelify Sans', sans-serif;
+        margin-bottom: 20px;
+    }
+    
+    .space-about{
+        height: 400px;
+        background: #313133;
+    }
+}
+
+@media (max-width: 400px){
+    @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400&display=swap');
+    .section-about-p{
+        height: 400px;
+        background: #313133;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .section-about-pa{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        text-align: center;
+    }
+    
+    .section-about-pa>h1{
+        font-family: 'Bebas Neue', sans-serif;
+        color: white;
+        font-size: 60px;
+    }
+    
+    .section-about-pa>p{
+        font-size: 13px;
+        color: white;
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    
+    .section-icons-about{
+        width: 80%;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+    
+    .section-icons-about>i{
+        font-size: 30px;
+    }
+    
+    .ti-brand-html5{
+        color: #DE4B25;
+    }
+    
+    .ti-brand-css3{
+        color: #254BDD;
+    }
+    
+    .ti-brand-javascript{
+        color: #E8D44D;
+    }
+    
+    .ti-brand-mysql{
+        color: #00718B;
+    }
+    
+    .ti-sql{
+        color: #3395D0;
+    }
+    
+    .ti-camera{
+        color: #2FA3F7;
+    }
+    
+    .ti-palette{
+        color: #F79500;
+    }
+    
+    .ti-player-play{
+        color: #61C3A4;
+    }
+    
+    .section-divs{
+        height: 600px;
+        background: #313133;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    .section-divs>div{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+        width: 300px;
+        border-radius: 20px;
+        border: 3px solid white;
+        margin-bottom: 70px;
+    }
+    
+    .div-p{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 90%;
+        align-items: center;
+        text-align: center;
+        color: white;
+    }
+    
+    .div-p>h2{
+        font-family: 'Staatliches', sans-serif;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+    
+    .div-p>p{
+        font-family: 'Asap Condensed', sans-serif;
+        font-size: 13px;
+        font-weight: 300;
+    }
+    
+    .icons-div{
+        margin-top: 20px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        font-size: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .ti-terminal-2{
+        color: #6D287E;
+    }
+    
+    .ti-server{
+        color: #F61310;
+    }
+    
+    .ti-brand-visual-studio{
+        color: #6B3494;
+    }
+    
+    .ti-building-broadcast-tower{
+        color: #70D5F1;
+    }
+    
+    .ti-network{
+        color: #1785B5;
+    }
+    
+    .ti-world-www{
+        color: #0A98F7;
+    }
+    
+    .ti-brand-windows{
+        color: #1CBEF7;
+    }
+    
+    .ti-brand-debian{
+        color: #A50443;
+    }
+    
+    .bi-ubuntu{
+        color: #EA5516;
+    }
+    
+    .outside-div{
+        height: 20px;
+        border-radius: 20px;
+        border: 3px solid white;
+        width: 250px;
+        display: flex;
+        justify-content: center;
+        color: white;
+        font-family: 'Pixelify Sans', sans-serif;
+        margin-bottom: 20px;
+    }
+    
+    .space-about{
+        height: 600px;
+        background: #313133;
+    }
+}
+
