--- a/styleexp.css
+++ b/styleexp.css
@@ -137,3 +137,429 @@
     transform: rotateX(20deg);
     box-shadow: 0px 0px 20px 5px #00A93A;
 }
+
+@media (max-width: 1400px){
+    @import url('https://fonts.googleapis.com/css2?family=Antonio:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500&display=swap');
+
+.section-exp{
+    height: 1500px;
+    background: #5F6063;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.section-exp>section{
+    margin-bottom: 100px;
+}
+
+.vang{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 340px;
+    box-shadow: 0px 5px 30px 10px #2E8984;
+}
+
+.titulo-vang{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.titulo-vang>img{
+    height: 100px;
+}
+
+.titulo-vang>h3{
+    font-family: 'Antonio', sans-serif;
+    color: white;
+    font-size: 50px;
+}
+
+.parra{
+    color: white;
+    margin-left: 33px;
+    font-size: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.parra1{
+    color: white;
+    margin-left: 33px;
+    font-size: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-bottom: 30px;
+}
+
+.links-vang>a{
+    color: white;
+    margin-left: 33px;
+    font-size: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 10px 10px;
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
+.free-front{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 0px 5px 30px 10px #E8D44D;
+}
+
+.titulo-front{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: 33px;
+    margin-bottom: 20px;
+}
+
+.titulo-front>h3{
+    font-family: 'Antonio', sans-serif;
+    color: white;
+    font-size: 60px;
+}
+
+.free-st{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 0px 5px 30px 10px #1CBEF7;
+}
+
+.space-about-exp{
+    height: 400px;
+    background: rgb(49,49,51);
+    background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%);
+}
+
+.title-exp{
+    height: 200px;
+    background: #5F6063;
+    display: flex;
+    justify-content: center;
+}
+.title-exp>h2{
+    font-family: 'Bungee', sans-serif;
+    font-size: 70px;
+    color: white;
+}
+
+.van-com{
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.van-com:hover{
+    background: rgb(70,162,159);
+    background: linear-gradient(0deg, rgba(70,162,159,1) 20%, rgba(33,117,113,1) 67%);
+    transform: rotateX(20deg);
+    box-shadow: 0px 0px 20px 5px rgb(70,162,159);
+}
+
+.cert-com{
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.cert-com:hover{
+    background: #00A93A;
+    transform: rotateX(20deg);
+    box-shadow: 0px 0px 20px 5px #00A93A;
+}
+}
+
+@media (max-width: 800px){
+@import url('https://fonts.googleapis.com/css2?family=Antonio:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500&display=swap');
+
+.section-exp{
+    height: 1500px;
+    background: #5F6063;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+}
+
+.section-exp>section{
+    margin-bottom: 100px;
+}
+
+.vang{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 340px;
+    box-shadow: 0px 5px 30px 10px #2E8984;
+}
+
+.titulo-vang{
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.titulo-vang>img{
+    height: 100px;
+}
+
+.titulo-vang>h3{
+    font-family: 'Antonio', sans-serif;
+    color: white;
+    font-size: 50px;
+}
+
+.parra{
+    color: white;
+    margin-left: 25px;
+    font-size: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.parra1{
+    color: white;
+    margin-left: 25px;
+    font-size: 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-bottom: 30px;
+}
+
+.links-vang>a{
+    color: white;
+    margin-left: 25px;
+    font-size: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 10px 10px;
+    border-radius: 20px;
+    border: 3px solid white;
+}
+
+.free-front{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 0px 5px 30px 10px #E8D44D;
+}
+
+.titulo-front{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: 25px;
+    margin-bottom: 20px;
+}
+
+.titulo-front>h3{
+    font-family: 'Antonio', sans-serif;
+    color: white;
+    font-size: 60px;
+}
+
+.free-st{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    border: 5px solid white;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 0px 5px 30px 10px #1CBEF7;
+}
+
+.space-about-exp{
+    height: 400px;
+    background: rgb(49,49,51);
+    background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%);
+}
+
+.title-exp{
+    height: 200px;
+    background: #5F6063;
+    display: flex;
+    justify-content: center;
+}
+.title-exp>h2{
+    font-family: 'Bungee', sans-serif;
+    font-size: 60px;
+    color: white;
+}
+
+.van-com{
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.van-com:hover{
+    background: rgb(70,162,159);
+    background: linear-gradient(0deg, rgba(70,162,159,1) 20%, rgba(33,117,113,1) 67%);
+    transform: rotateX(20deg);
+    box-shadow: 0px 0px 20px 5px rgb(70,162,159);
+}
+
+.cert-com{
+    transition: transform 0.5s ease, box-shadow 0.5s ease;
+}
+
+.cert-com:hover{
+    background: #00A93A;
+    transform: rotateX(20deg);
+    box-shadow: 0px 0px 20px 5px #00A93A;
+}
+}
+
+@media (max-width: 400px){
+    @import url('https://fonts.googleapis.com/css2?family=Antonio:wght@400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;500&display=swap');
+    
+    .section-exp{
+        height: 1500px;
+        background: #5F6063;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+    }
+    
+    .section-exp>section{
+        margin-bottom: 100px;
+    }
+    
+    .vang{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        border: 5px solid white;
+        border-radius: 20px;
+        height: 230px;
+        box-shadow: 0px 5px 30px 10px #2E8984;
+    }
+    
+    .titulo-vang{
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+    
+    .titulo-vang>img{
+        height: 50px;
+    }
+    
+    .titulo-vang>h3{
+        font-family: 'Antonio', sans-serif;
+        color: white;
+        font-size: 30px;
+    }
+    
+    .parra{
+        color: white;
+        margin-left: 15px;
+        font-size: 13px;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+    
+    .parra1{
+        color: white;
+        margin-left: 15px;
+        font-size: 13px;
+        font-family: 'Roboto Condensed', sans-serif;
+        margin-bottom: 30px;
+    }
+    
+    .links-vang>a{
+        color: white;
+        margin-left: 5px;
+        font-size: 15px;
+        font-family: 'Roboto Condensed', sans-serif;
+        padding: 5px 5px;
+        border-radius: 20px;
+        border: 3px solid white;
+    }
+    
+    .free-front{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        border: 5px solid white;
+        border-radius: 20px;
+        height: 170px;
+        box-shadow: 0px 5px 30px 10px #E8D44D;
+    }
+    
+    .titulo-front{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        margin-left: 15px;
+        margin-bottom: 20px;
+    }
+    
+    .titulo-front>h3{
+        font-family: 'Antonio', sans-serif;
+        color: white;
+        font-size: 30px;
+    }
+    
+    .free-st{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        border: 5px solid white;
+        border-radius: 20px;
+        height: 170px;
+        box-shadow: 0px 5px 30px 10px #1CBEF7;
+    }
+    
+    .space-about-exp{
+        height: 400px;
+        background: rgb(49,49,51);
+        background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%);
+    }
+    
+    .title-exp{
+        height: 200px;
+        background: #5F6063;
+        display: flex;
+        justify-content: center;
+    }
+    .title-exp>h2{
+        font-family: 'Bungee', sans-serif;
+        font-size: 45px;
+        color: white;
+    }
+    
+    .van-com{
+        transition: transform 0.5s ease, box-shadow 0.5s ease;
+    }
+    
+    .van-com:hover{
+        background: rgb(70,162,159);
+        background: linear-gradient(0deg, rgba(70,162,159,1) 20%, rgba(33,117,113,1) 67%);
+        transform: rotateX(20deg);
+        box-shadow: 0px 0px 20px 5px rgb(70,162,159);
+    }
+    
+    .cert-com{
+        transition: transform 0.5s ease, box-shadow 0.5s ease;
+    }
+    
+    .cert-com:hover{
+        background: #00A93A;
+        transform: rotateX(20deg);
+        box-shadow: 0px 0px 20px 5px #00A93A;
+    }
+    }
