--- a/styletech.css
+++ b/styletech.css
@@ -421,7 +421,7 @@ background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%)
 
 @media (max-width: 400px){
     .tech{
-        height: 1000px;
+        height: 1200px;
         background: #5F6063;
         display: flex;
         flex-direction: column;
@@ -436,8 +436,9 @@ background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%)
         width: 70%;
         border-radius: 20px;
         border: 5px solid white;
-        height: 300px;
+        height: 350px;
         margin-bottom: 70px;
+        padding: 10px 0px;
     }
     
     .section-tech>div>h2{
@@ -484,8 +485,9 @@ background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%)
         width: 70%;
         border-radius: 20px;
         border: 5px solid white;
-        height: 400px;
+        height: 450px;
         margin-bottom: 70px;
+        padding: 10px 0px;
     }
     
     .section-tech1>div>h2{
@@ -519,8 +521,9 @@ background: linear-gradient(180deg, rgba(49,49,51,1) 25%, rgba(95,96,99,1) 100%)
         width: 70%;
         border-radius: 20px;
         border: 5px solid white;
-        height: 400px;
+        height: 450px;
         margin-bottom: 50px;
+        padding: 10px 0px;
     }
     
     .section-tech2>div>h2{
